--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -101,7 +101,8 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: #18bc9c;
+  /*--bs-link-color: #18bc9c;*/
+  --bs-link-color: black;
   --bs-link-color-rgb: 24, 188, 156;
   --bs-link-decoration: underline;
   --bs-link-hover-color: #13967d;
@@ -631,6 +632,41 @@ progress {
   bottom: 5px;
   transform: translateX(-50%);
   font-size: 12px;
+}
+
+/* admin 관련 */
+.admin-container {
+  /*margin-top: 75px;*/
+  /*margin: 2% auto;*/
+  /*display: flex;*/
+  /*justify-content: center;*/
+  /*align-items: center;*/
+  /*height: 90vh;*/
+  /*width: 70%;*/
+  border: 1px solid black;
+  min-height: 100vh;
+  position: relative;
+}
+
+.admin-wrapper {
+  position: absolute;
+  width: auto;
+  height: 60vh;
+  text-align: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+}
+
+.left-nav {
+  /*flex: auto;*/
+  width: 300px;
+}
+
+.home-image-table {
+  /*flex: auto;*/
+  width: 1200px;
 }
 
 .lead {
@@ -3860,7 +3896,8 @@ textarea.form-control-lg {
   --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-font-weight: ;
   --bs-nav-link-color: var(--bs-link-color);
-  --bs-nav-link-hover-color: var(--bs-link-hover-color);
+  /*--bs-nav-link-hover-color: var(--bs-link-hover-color);*/
+  --bs-nav-link-hover-color: #4e87d0;
   --bs-nav-link-disabled-color: #95a5a6;
   display: flex;
   flex-wrap: wrap;
@@ -3902,8 +3939,10 @@ textarea.form-control-lg {
   --bs-nav-tabs-border-width: var(--bs-border-width);
   --bs-nav-tabs-border-color: #ced4da;
   --bs-nav-tabs-border-radius: var(--bs-border-radius);
-  --bs-nav-tabs-link-hover-border-color: #ced4da #ced4da transparent;
+  /*--bs-nav-tabs-link-hover-border-color: #ced4da #ced4da transparent;*/
+  --bs-nav-tabs-link-hover-border-color: #8daed0 #ced4da transparent;
   --bs-nav-tabs-link-active-color: #18bc9c;
+  /*--bs-nav-tabs-link-active-color: #030303;*/
   --bs-nav-tabs-link-active-bg: var(--bs-body-bg);
   --bs-nav-tabs-link-active-border-color: #ced4da #ced4da transparent;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
@@ -3933,7 +3972,8 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #2c3e50;
+  /*--bs-nav-pills-link-active-bg: #2c3e50;*/
+  --bs-nav-pills-link-active-bg: rgba(78, 135, 208, 0.7);
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -4049,7 +4089,7 @@ textarea.form-control-lg {
   --bs-nav-link-font-weight: ;
   --bs-nav-link-color: var(--bs-navbar-color);
   /*--bs-nav-link-hover-color: var(--bs-navbar-hover-color);*/
-  --bs-nav-link-hover-color: #18bc9c;
+  --bs-nav-link-hover-color: #4e87d0;
   --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
   display: flex;
   flex-direction: column;
