--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -27,79 +27,38 @@
           </li>
         </ul>
       </div>
-      <div class="home-image-table">
-        <table class="table table-hover">
-          <thead>
-          <tr>
-            <th scope="col">Type</th>
-            <th scope="col">Column heading</th>
-            <th scope="col">Column heading</th>
-            <th scope="col">Column heading</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr class="table-active">
-            <th scope="row">Active</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr>
-            <th scope="row">Default</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-primary">
-            <th scope="row">Primary</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-secondary">
-            <th scope="row">Secondary</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">Success</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">Danger</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">Warning</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-info">
-            <th scope="row">Info</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-light">
-            <th scope="row">Light</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          <tr class="table-dark">
-            <th scope="row">Dark</th>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-          </tbody>
-        </table>
+      <div class="home-image-wrapper">
+        <div class="home-image-table">
+          <table class="table table-hover">
+            <thead>
+            <tr class="table-dark">
+              <th scope="col"></th>
+              <th scope="col">ID</th>
+              <th scope="col">Title</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="table-light">
+              <th scope="row" ><input class="form-check-input" type="checkbox" value=""></th>
+              <td>Column content</td>
+              <td>Column content</td>
+            </tr>
+            <tr class="table-light">
+              <th scope="row"><input class="form-check-input" type="checkbox" value=""></th>
+              <td>Column content</td>
+              <td>Column content</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="home-image-button-wrapper">
+          <div class="home-image-save">
+            <button type="button" class="btn btn-success">저장</button>
+          </div>
+          <div class="home-image-delete">
+            <button type="button" class="btn btn-danger">삭제</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
