--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -53,7 +53,8 @@
         </div>
         <div class="home-image-button-wrapper">
           <div class="home-image-save">
-            <button type="button" class="btn btn-success">저장</button>
+<!--            <button type="button" class="btn btn-success">저장</button>-->
+            <a class="btn btn-success" href="/admin/home/save">저장</a>
           </div>
           <div class="home-image-delete">
             <button type="button" class="btn btn-danger">삭제</button>
