[feat] : save.html 내부 구조 css 설정

--- a/src/main/resources/templates/admin/save.html
+++ b/src/main/resources/templates/admin/save.html
@@ -17,21 +17,21 @@
 
   <div class="home-image-save-container">
     <div class="home-image-save-wrapper">
-      <div class="home-image-saved"></div>
+      <div class="home-image-saved">
+          <p>리스트</p>
+      </div>
       <div class="home-image-save-form">
-        <form>
+        <form class="home-image-form">
           <div class="home-image-save-input">
             <div class="form-group">
               <label for="formFile" class="form-label mt-4">홈 이미지로 저장할 파일</label>
               <input class="form-control" type="file" id="formFile">
-            </div>
-            <div class="form-group">
               <label class="form-label mt-4">Title</label>
               <input type="text" class="form-control" placeholder="Title">
             </div>
           </div>
-          <div class="home-image-save-btn">
-            <button type="submit" class="btn btn-success">저장</button>
+          <div class="home-image-save-btn-wrapper">
+            <button type="submit" class="btn btn-success home-image-save-btn">저장</button>
           </div>
         </form>
       </div>
