--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -722,16 +722,25 @@ progress {
   width: 50%;
 }
 
-.home-image-save-input {
-  /*height: 90%;*/
+.home-image-form {
+  height: 100%;
 }
 
-.home-image-save-btn {
-  /*height: 10%;*/
+.home-image-save-input {
+  height: 90%;
+  border-bottom: 2px solid black;
+}
+
+.home-image-save-btn-wrapper {
+  display: flex;
+  height: 10%;
+  padding-right: 3%;
+  justify-content: right;
+  align-items: center;
 }
 
 .form-group {
-  padding: 3%;
+  padding: 1% 3%;
 }
 
 .lead {
