[feat] : home link 추가

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -3,7 +3,7 @@
 <div class="header" th:fragment="navFrament">
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">CHOI &nbsp; MYEONGHEON</a>
+      <a class="navbar-brand" href="/home">CHOI &nbsp; MYEONGHEON</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
