--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -31,23 +31,18 @@
         <div class="home-image-table">
           <table class="table table-hover">
             <thead>
-            <tr class="table-dark">
-              <th scope="col"></th>
-              <th scope="col">ID</th>
-              <th scope="col">Title</th>
-            </tr>
+              <tr class="table-dark">
+                <th scope="col"></th>
+                <th scope="col">ID</th>
+                <th scope="col">Title</th>
+              </tr>
             </thead>
             <tbody>
-            <tr class="table-light">
-              <th scope="row" ><input class="form-check-input" type="checkbox" value=""></th>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
-            <tr class="table-light">
-              <th scope="row"><input class="form-check-input" type="checkbox" value=""></th>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
+              <tr class="table-light" th:each="homeImage : ${homeImages}">
+                <th scope="row" ><input class="form-check-input" type="checkbox" value=""></th>
+                <td th:text="${homeImage.id}">Column content</td>
+                <td th:text="${homeImage.title}">Column content</td>
+              </tr>
             </tbody>
           </table>
         </div>
