--- a/src/main/resources/templates/admin/homeImage/save.html
+++ b/src/main/resources/templates/admin/homeImage/save.html
@@ -12,29 +12,64 @@
 
   <div class="home-image-save-container">
     <div class="home-image-save-wrapper">
-      <div class="home-image-saved">
-          <p>리스트</p>
+      <div class="left-nav">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="/admin/home-images">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/works">Works</a>
+          </li>
+        </ul>
       </div>
-      <div class="home-image-save-form">
-        <form th:action="@{/admin/home/save}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
-          <div class="home-image-save-input">
-            <div class="form-group">
-              <label for="formFile" class="form-label mt-4">홈 이미지로 저장할 파일</label>
-              <input class="form-control" type="file" id="formFile" accept="image/*" th:field="*{homeImage}" required>
-              <div class="invalid-feedback">
-                Please select the home-image
-              </div>
-              <label class="form-label mt-4">Title</label>
-              <input type="text" th:field="*{title}" class="form-control" placeholder="Title" required>
-              <div class="invalid-feedback">
-                Please write the title
+      <div class="home-image-right-wrapper">
+        <div class="home-image-saved-list">
+          <h5>현재 저장된 홈 이미지</h5>
+          <table class="table table-hover">
+            <thead>
+            <tr class="table-dark">
+              <th scope="col">Image</th>
+              <th scope="col">Title</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="table-light" th:each="homeImage : ${homeImages}">
+              <td><img th:src="'/admin/home-images/display?fileName='+${homeImage.fileName}" class="img-fluid" style="width: 4rem"></td>
+              <td th:text="${homeImage.title}"></td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="home-image-save-form">
+          <form th:action="@{/admin/home-images/save}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
+            <div class="home-image-save-input">
+              <div class="form-group">
+                <div class="form-home-image">
+                  <label for="formFile" class="form-label mt-4">홈 이미지로 저장할 파일</label>
+                  <input class="form-control" type="file" id="formFile" accept="image/*" th:field="*{homeImage}" required>
+                  <div class="invalid-feedback">
+                    Please select the home-image
+                  </div>
+                </div>
+                <div class="form-home-image-title">
+                  <label class="form-label mt-4">Title</label>
+                  <input type="text" th:field="*{title}" class="form-control" placeholder="Title" required>
+                  <div class="invalid-feedback">
+                    Please write the title
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="home-image-save-btn-wrapper">
-            <button type="submit" class="btn btn-success home-image-save-btn">저장</button>
-          </div>
-        </form>
+            <div class="home-image-save-btn-wrapper">
+              <div class="home-image-save">
+                <a class="btn btn-secondary" href="/admin/home-images">이전</a>
+              </div>
+              <div class="home-image-delete">
+                <button type="submit" class="btn btn-success home-image-save-btn">저장</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
