[refactor] : HomeImageController URI 변경

--- a/src/main/resources/templates/admin/homeImage/delete.html
+++ b/src/main/resources/templates/admin/homeImage/delete.html
@@ -20,7 +20,7 @@
     <div class="left-nav">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="/admin/home">Home</a>
+          <a class="nav-link active" href="/admin/home-images">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/admin/works">Works</a>
@@ -28,7 +28,7 @@
       </ul>
     </div>
     <div class="home-image-wrapper">
-      <form th:action="@{/admin/home/delete}" th:object="${request}" method="post" style="height: 100%">
+      <form th:action="@{/admin/home-images}" th:object="${request}" method="#" th:method="delete" style="height: 100%">
         <div class="home-image-table">
           <table class="table table-hover">
             <thead>
@@ -41,7 +41,7 @@
             <tbody>
             <tr class="table-light" th:each="homeImage, itemStat : *{homeImageDeletionDtoList}">
               <th><input type="checkbox" th:field="*{homeImageDeletionDtoList[__${itemStat.index}__].deleted}" class="form-check-input"></th>
-              <td><img th:src="'/admin/home/display?fileName='+${homeImage.fileName}" class="img-fluid" style="width: 50px"></td>
+              <td><img th:src="'/admin/home-images/display?fileName='+${homeImage.fileName}" class="img-fluid" style="width: 4rem"></td>
               <td th:text="${homeImage.title}"></td>
               <td style="display: none"><input type="hidden" th:field="*{homeImageDeletionDtoList[__${itemStat.index}__].id}"></td>
               <td style="display: none"><input type="hidden" th:field="*{homeImageDeletionDtoList[__${itemStat.index}__].fileName}"></td>
@@ -52,7 +52,7 @@
         </div>
         <div class="home-image-button-wrapper">
           <div class="home-image-save">
-            <a class="btn btn-secondary" href="/admin/home">이전</a>
+            <a class="btn btn-secondary" href="/admin/home-images">이전</a>
           </div>
           <div class="home-image-delete">
             <button type="submit" class="btn btn-danger">삭제</button>
