--- a/src/main/resources/templates/admin/homeImage/save.html
+++ b/src/main/resources/templates/admin/homeImage/save.html
@@ -41,7 +41,7 @@
           </table>
         </div>
         <div class="home-image-save-form">
-          <form th:action="@{/admin/home-images/save}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
+          <form th:action="@{/admin/home-images}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
             <div class="home-image-save-input">
               <div class="form-group">
                 <div class="form-home-image">
