--- a/src/main/resources/templates/admin/homeImage/home.html
+++ b/src/main/resources/templates/admin/homeImage/home.html
@@ -43,10 +43,10 @@
         </div>
         <div class="home-image-button-wrapper">
           <div class="home-image-save">
-            <a class="btn btn-success" href="/admin/home-images/save">저장</a>
+            <a class="btn btn-success" href="/admin/home-images/save-form">저장</a>
           </div>
           <div class="home-image-delete">
-            <a class="btn btn-danger" href="/admin/home-images/delete">삭제</a>
+            <a class="btn btn-danger" href="/admin/home-images/delete-form">삭제</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <h1 class="modal-title fs-5" id="homeImageUpdateModalLabel">New message</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form th:action="@{/admin/home-images/update}" th:object="${request}" method="post" class="validation-form" novalidate>
+        <form th:action="@{/admin/home-images}" th:object="${request}" th:method="put" class="validation-form" novalidate>
         <div class="modal-body">
             <div class="mb-3">
               <label class="col-form-label">HomeImage:</label>
