--- a/src/main/resources/templates/admin/works.html
+++ b/src/main/resources/templates/admin/works.html
@@ -20,7 +20,7 @@
     <div class="left-nav">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="/admin/home">Home</a>
+          <a class="nav-link" href="/admin/home-images">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="/admin/works">Works</a>
