[feat] : dropdown 에서 선택한 item 의 workYear 불러오기

--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -29,10 +29,10 @@
             <a class="nav-link active" data-bs-toggle="tab" href="#all" aria-selected="true" role="tab">ALL</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Years</a>
+            <a class="nav-link dropdown-toggle" id="work-year" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Years</a>
             <ul class="dropdown-menu">
               <li role="presentation" th:each="workYear : ${workYears}" style="text-align: center">
-                <a class="dropdown-item" data-bs-toggle="tab" th:href="'#' + ${workYear.year}" th:text="${workYear.year}" aria-selected="false" role="tab" tabindex="-1">2018</a>
+                <a class="dropdown-item" data-bs-toggle="tab" th:href="'#' + ${workYear.year}" th:text="${workYear.year}" aria-selected="false" role="tab" tabindex="-1" onclick="dropDownHandler(this)">2018</a>
               </li>
             </ul>
           </li>
@@ -91,5 +91,12 @@
 <div class="home-footer">ALL IMAGES AND SITE CONTENT © CHOI MYEONGHEON</div>
 
 <script src="/js/bootstrap.bundle.js"></script>
+<script>
+  function dropDownHandler(elem) {
+    const workYear = document.querySelector('#work-year');
+    const selectedWorkYear = elem.textContent;
+    workYear.textContent = selectedWorkYear;
+  }
+</script>
 </body>
 </html>
