--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -1,8 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header.html :: header}">
-  <title>Hello</title>
+<head>
+  <title>CHOIMYEONGHEON</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+        integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 </head>
 <body>
 
@@ -48,10 +54,12 @@
               </tr>
               </thead>
               <tbody>
-              <tr class="table-light" th:each="work : ${works}">
+              <tr class="table-light" th:each="work : ${works}" data-bs-toggle="modal" data-bs-target="#workUpdateModal">
                 <td><img th:src="'/admin/works/display?fileName='+${work.fileName}" class="img-fluid" style="width: 6rem"></td>
                 <td th:text="${work.title}"></td>
                 <td th:text="${work.workDate}"></td>
+                <td th:text="${work.fileName}" style="display: none"></td>
+                <td th:text="${work.id}" style="display: none"></td>
               </tr>
               </tbody>
             </table>
@@ -66,10 +74,12 @@
                 </tr>
               </thead>
               <tbody>
-                <tr class="table-light" th:each="work : ${works}" th:if="${work.getWorkDate().getYear() == workYear.year}">
+                <tr class="table-light" th:each="work : ${works}" th:if="${work.getWorkDate().getYear() == workYear.year}" data-bs-toggle="modal" data-bs-target="#workUpdateModal">
                   <td><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" class="img-fluid" style="width: 6rem"></td>
                   <td th:text="${work.title}"></td>
                   <td th:text="${work.workDate}"></td>
+                  <td th:text="${work.fileName}" style="display: none"></td>
+                  <td th:text="${work.id}" style="display: none"></td>
                 </tr>
               </tbody>
             </table>
@@ -88,8 +98,54 @@
   </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="workUpdateModal" tabindex="-1" aria-labelledby="workUpdateModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="workUpdateModalLabel">New message</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form th:action="@{/admin/works}" th:object="${request}" th:method="put" class="validation-form" novalidate>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label class="col-form-label">Work:</label>
+            <img class="img-fluid" style="width: 6rem; display: block">
+          </div>
+          <div class="mb-3">
+            <label for="title" class="col-form-label">Title:</label>
+            <input type="text" th:field="*{updatedTitle}" class="form-control" id="title" required>
+            <div class="invalid-feedback">
+              Please write the title
+            </div>
+            <input type="hidden" th:field="*{id}" id="home-image-id">
+          </div>
+          <div class="mb-3">
+            <label class="col-form-label">Work Date</label>
+            <input type="text" id="date-picker" class="form-control" aria-label="Search" aria-describedby="basic-addon2" th:field="*{updatedWorkDate}" required>
+            <div class="invalid-feedback">
+              Please select the Work Date
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+          <button type="submit" class="btn btn-primary">수정</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
 <div class="home-footer">ALL IMAGES AND SITE CONTENT © CHOI MYEONGHEON</div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+        integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"
+        integrity="sha512-L4qpL1ZotXZLLe8Oo0ZyHrj/SweV7CieswUODAAPN/tnqN3PA1P+4qPu5vIryNor6HQ5o22NujIcAZIfyVXwbQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="/js/bootstrap.bundle.js"></script>
 <script>
   function dropDownHandler(elem) {
@@ -97,6 +153,75 @@
     const selectedWorkYear = elem.textContent;
     workYear.textContent = selectedWorkYear;
   }
+
+  // Modal 에 데이터 전달하는 로직
+  const workUpdateModal = document.getElementById('workUpdateModal');
+  workUpdateModal.addEventListener('show.bs.modal', event => {
+    const tr = event.relatedTarget;
+    const title = tr.cells[1].innerHTML;
+    const workDate = tr.cells[2].innerHTML;
+    const fileName = tr.cells[3].innerHTML;
+    const id = tr.cells[4].innerHTML;
+
+    const modalTitle = workUpdateModal.querySelector('.modal-title');
+    const modalBodyInputTitle = workUpdateModal.querySelector('.modal-body #title');
+    const modalBodyWorkDate = workUpdateModal.querySelector('.modal-body #date-picker');
+    const modalHomeImage = workUpdateModal.querySelector('.modal-body img');
+    const modalBodyInputId = workUpdateModal.querySelector('.modal-body #home-image-id');
+
+    modalTitle.textContent = `Information of ${title}`;
+    modalBodyInputTitle.value = title;
+    modalBodyWorkDate.value = workDate;
+    modalBodyInputId.value = id;
+    modalHomeImage.src = `/admin/works/display?fileName=${fileName}`;
+  })
+
+  // Modal 내 Input Validation 로직
+  window.addEventListener('load', () => {
+    const forms = document.getElementsByClassName('validation-form');
+
+    Array.prototype.filter.call(forms, (form) => {
+      form.addEventListener('submit', function (event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+
+  window.addEventListener('load', () => {
+    const forms = document.getElementsByClassName('validation-form');
+
+    Array.prototype.filter.call(forms, (form) => {
+      form.addEventListener('submit', function (event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+
+  document.querySelector('#date-picker').value = new Date().toISOString().slice(0, 7);
+
+  $(document).ready(function() {
+    $('#date-picker').datepicker({
+      format: "yyyy-mm",
+      minViewMode: 1,
+      language: "ko",
+      autoclose: true
+    })
+
+    $('#get-history').on('click', function() {
+      const dateArr = $('#date-picker').val().split('-')
+      location.href = '/history?year=' + dateArr[0] + '&month=' + dateArr[1]
+    })
+  })
 </script>
 </body>
 </html>
