[feat] : security 관련 error 처리 구현

--- a/src/main/resources/templates/exception/error.html
+++ b/src/main/resources/templates/exception/error.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div class="error-text" id="error-text" th:text="${message}"></div>
+<div class="error-text" id="error-text" th:text="${errorMessage}"></div>
 
 <script>
   const message = document.getElementById("error-text").innerText;
