--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <div class="header" th:fragment="navFrament">
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
@@ -9,6 +9,14 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">
         <ul class="navbar-nav">
+          <li sec:authorize="isAuthenticated()" class="nav-item" >
+            <form th:action="@{/logout}" th:method="post">
+              <button class="nav-link" href="/admin/home-images">Logout</button>
+            </form>
+          </li>
+          <li sec:authorize="isAuthenticated()" class="nav-item" >
+            <a class="nav-link" href="/admin/home-images">Admin</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" href="/home">Home
               <span class="visually-hidden">(current)</span>
