[feat] : Profile MappedSuperclass 추가

--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="/admin/works">Works</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/profile/career">Profile</a>
+        </li>
       </ul>
     </div>
     <div class="home-image-wrapper">
